--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip==19.3.1
+# pip==19.3.1
 transformers==4.6.1
 sacremoses
 tokenizers==0.10.1
@@ -24,4 +24,3 @@ pandas==1.0.1
 tqdm==4.42.1
 numpy==1.18.1
 sphinx-rtd-theme==0.5.0
-
